# Home-Air-Monitoring-System

./: .gitignore  README.md  TODO.md
docs/: hub.md  hub_firmware.md  hub_hardware.md  issues.md  node.md  node_firmware.md  node_hardware.md  sht4x_calibration.md
docs/images/: HAMS_hub_FW_flowchart.drawio  HAMS_node_FW_flowchart.drawio
hub/3D_models/: HAMS_hub_case.3mf  HAMS_hub_case_0.4n_0.15mm_PLA_MK4S_4h1m.bgcode  HAMS_hub_case_cut.3mf  HAMS_hub_cover.3mf  HAMS_hub_cover.stl  HAMS_hub_cover_0.4n_0.15mm_PLA_MK4S_1h38m.gcode
hub/firmware/components/CalEPD/: CMakeLists.txt  Kconfig.projbuild
hub/firmware/components/CalEPD/include/: epd.h  epd_colors.h  epdspi.h
hub/firmware/components/CalEPD/include/displays/goodisplay/: gdey029T94.h  gdey075T7.h
hub/firmware/components/CalEPD/src/: epd.cpp  epdspi.cpp
hub/firmware/components/CalEPD/src/displays/goodisplay/: gdey029T94.cpp  gdey075T7.cpp
hub/firmware/main/: CMakeLists.txt  bme280_i2c.c  bme280_i2c.h  calendar_data.h  cjson_parsing.c  cjson_parsing.h  display_control.cpp  display_control.h  hams_data.h  hams_defines.h  main.cpp  node_constants.c  node_constants.h  nodes.c  nodes.h  nrf24l01p.c  nrf24l01p.h  openweathermap_api.c  openweathermap_api.h  radio_control.c  radio_control.h  scd4x.c  scd4x.h  sensirion_gas_index_algorithm.c  sensirion_gas_index_algorithm.h  sensor_control.c  sensor_control.h  sgp41.c  sgp41.h  sht4x.c  sht4x.h  sntp_api.c  sntp_api.h  sntp_control.c  sntp_control.h  sps30_i2c.c  sps30_i2c.h  svatky_api.c  svatky_api.h  time_of_day_icons.h  (+8 more)
node/3D_models/: HAMS_node_case_small.3mf  HAMS_node_case_small.stl  HAMS_node_case_small_0.4n_0.15mm_PLA_MK4S_2h5m.bgcode  HAMS_node_case_small_cover.stl  HAMS_node_case_small_x2.3mf
utilities/sht_sensor_burn_in/: platformio.ini
utilities/sht_sensor_calibration/: README.md  (+1 more)
(+84 files in other folders)
